Ensure disabled high-contrast radio cards are correct

--- a/packages/radix-ui-themes/src/components/radio-card-group.css
+++ b/packages/radix-ui-themes/src/components/radio-card-group.css
@@ -162,4 +162,8 @@
 .rt-RadioCardGroupRoot:where(.rt-high-contrast)
   :where(.rt-RadioCardGroupItem[data-state='checked']) {
   outline-color: var(--accent-12);
+
+  &:where(:disabled) {
+    outline-color: var(--gray-8);
+  }
 }
